# Human-Segmentation-PyTorch-EfficientNet

./: Image_Segmentation_Lab.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt
